Add validation errors custom messages. Started developing notification api
Needs to implement RabbitMq for communication and API method's
